# monorepo-python-and-javascript-package

./: .gitignore  README.md
js/: lerna.json  package.json  rollup.config.js
py/: pyproject.toml  requirements.txt
